--- a/styles/sass/style.css
+++ b/styles/sass/style.css
@@ -8,8 +8,8 @@
 header {
   position: fixed;
   width: 100%;
-  -webkit-backdrop-filter: blur(10px);
-          backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(6px);
+          backdrop-filter: blur(6px);
   background-color: rgba(0, 0, 1, 0.514);
   z-index: 1;
 }
@@ -17,54 +17,48 @@ header div.container {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 8vh;
+  height: 9vh;
 }
 header div.container div {
   display: flex;
   align-items: center;
 }
 header div.container div img {
-  width: 5vw;
-  margin: 0.7vw;
-}
-header div.container div h6 {
-  padding-top: 1vh;
-  font-family: "Open Sans";
-  font-weight: 700;
-  font-size: 1.6em;
+  width: 4vw;
+  margin: 0.3vw;
 }
 header nav {
   display: flex;
   align-items: center;
-  gap: 5vw;
+  gap: 3vw;
 }
 header nav a {
-  font-size: 2vh;
+  font-size: 1.5vh;
   font-weight: 600;
   text-decoration: none;
   color: #f3f3f3;
 }
 header button {
-  border-radius: 16px;
+  border-radius: 12px;
   border: none;
   display: flex;
   align-items: center;
-  height: 6vh;
+  height: 4vh;
   background: linear-gradient(to right, #004aad, #7F00FF, #E100FF);
 }
 header button i,
 header button p {
-  margin: 0.6vw;
+  margin: 0.4vw;
   font-weight: 700;
   color: #f3f3f3;
-  font-size: 0.9em;
+  font-size: 0.7em;
 }
 header:hover {
   top: 0;
 }
 
 main section.inicio {
-  background: no-repeat url(../IMG/fundo.png);
+  background: no-repeat url(../img/fundo.png);
   background-size: cover;
   display: flex;
   flex-direction: column;
@@ -87,7 +81,7 @@ main section.inicio .digitacao {
 main section.inicio .digitacao div {
   display: block;
   font-weight: 700;
-  font-size: 4rem;
+  font-size: 3rem;
 }
 main section.inicio .footerSectionInicio {
   position: absolute;
@@ -100,108 +94,108 @@ main section.inicio .footerSectionInicio {
 }
 main section.inicio .footerSectionInicio .divSubtituloInicio {
   text-align: center;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1.2rem;
 }
 main section.inicio .footerSectionInicio .divSubtituloInicio h3 {
-  font-size: 1.8rem;
+  font-size: 1.5rem;
 }
 main section.inicio .footerSectionInicio .divImg {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  gap: 8vw;
+  gap: 6vw;
 }
 main section.inicio .footerSectionInicio .divImg img {
-  width: 6vw;
+  width: 5vw;
   height: auto;
 }
 main section.devWorkstation {
   display: flex;
-  margin: 0.5vh 1vw;
+  margin: 0.4vh 0.8vw;
   align-items: center;
-  padding: 15vh 0;
+  padding: 12vh 0;
 }
 main section.devWorkstation h2,
 main section.devWorkstation p {
   color: #000;
 }
 main section.devWorkstation h2 {
-  font-size: 2em;
+  font-size: 1.6em;
   background: linear-gradient(to right, #3372E3 0%, #7426EF 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-weight: 300;
   font-family: "Anton";
-  margin-bottom: 7vh;
+  margin-bottom: 5vh;
 }
 main section.devWorkstation p {
   font-weight: 650;
   font-family: "Open Sans";
-  font-size: 2em;
+  font-size: 1.6em;
 }
 main section.devWorkstation img {
-  height: 95vh;
+  height: 80vh;
 }
 main section.cards {
-  margin-top: 9rem;
+  margin-top: 7rem;
 }
 main section.cards h2 {
-  font-size: 2em;
+  font-size: 1.6em;
   background: linear-gradient(to right, #3372E3 0%, #7426EF 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-weight: 300;
   font-family: "Anton";
-  margin-bottom: 7vh;
+  margin-bottom: 5vh;
   text-align: center;
 }
 main section.cards div {
   display: flex;
   justify-content: space-between;
-  margin: 0 1em;
+  margin: 0 0.8em;
 }
 main section.cards div div {
   background-image: radial-gradient(circle farthest-corner at 11.3% -0.8%, rgb(153, 14, 241) 0%, rgb(41, 3, 101) 100.2%);
-  border-radius: 35px;
-  width: 15vw;
-  height: 38vh;
+  border-radius: 30px;
+  width: 12vw;
+  height: 30vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 main section.cards div div img {
-  border-radius: 30px;
-  width: 13vw;
-  height: 18vh;
+  border-radius: 25px;
+  width: 10vw;
+  height: 15vh;
   background-color: #f3f3f3;
-  margin-bottom: 4vh;
+  margin-bottom: 3vh;
 }
 main section.cards div div h6 {
   font-family: "Open Sans";
-  font-size: 2em;
+  font-size: 1.6em;
   font-weight: 700;
   color: #f3f3f3;
 }
 main section.cards div #cardEmbarcados {
-  width: 16vw;
+  width: 12vw;
 }
 main section.sobreNos {
   display: flex;
-  padding: 15vh 0;
+  padding: 12vh 0;
   justify-content: center;
   flex-direction: column;
 }
 main section.sobreNos h2 {
-  margin-top: 5vh;
-  font-size: 2em;
+  margin-top: 4vh;
+  font-size: 1.6em;
   background: linear-gradient(to right, #3372E3 0%, #7426EF 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-weight: 300;
   font-family: "Anton";
-  margin-bottom: 3vh;
+  margin-bottom: 2vh;
   text-align: center;
 }
 main section.sobreNos p,
@@ -209,20 +203,20 @@ main section.sobreNos h3 {
   font-weight: 650;
   font-family: "Open Sans";
   text-align: center;
-  font-size: 1.5em;
+  font-size: 1.2em;
   color: #000;
 }
 main section.sobreNos div {
   display: flex;
   justify-content: center;
-  margin-top: 2rem;
+  margin-top: 1.2rem;
 }
 main section.sobreNos div button {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 1.5rem 3rem;
-  border-radius: 50px;
+  padding: 1rem 2rem;
+  border-radius: 40px;
   background: linear-gradient(to right, #004aad, #7F00FF, #E100FF);
   border: none;
   cursor: pointer;
@@ -232,10 +226,10 @@ main section.sobreNos div button p {
   font-family: "Open Sans";
   color: #f3f3f3;
   font-weight: 650;
-  font-size: 1rem;
+  font-size: 0.8rem;
 }
 main section.sobreNos div button i {
-  margin-right: 1rem;
+  margin-right: 0.8rem;
   display: flex;
   align-items: center;
 }
@@ -246,7 +240,7 @@ main section.sobreNos div button p {
 }
 
 section.letreiro {
-  padding: 5vh 0;
+  padding: 3vh 0;
   width: 100%;
 }
 section.letreiro marquee {
@@ -254,13 +248,13 @@ section.letreiro marquee {
 }
 section.letreiro marquee i {
   color: #000;
-  font-size: 1.3em;
+  font-size: 1em;
   font-weight: 600;
   font-family: "Open Sans";
 }
 section.letreiro marquee i#vermelhinho {
   color: #b81414;
-  margin-right: 6.5vw;
+  margin-right: 5vw;
 }
 
 footer.finalDoSite {
@@ -272,13 +266,13 @@ footer.finalDoSite div {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem;
+  padding: 0.8rem;
 }
 footer.finalDoSite div article,
 footer.finalDoSite div nav,
 footer.finalDoSite div .imgSection {
-  max-width: 30%;
-  margin: 0 1rem;
+  max-width: 25%;
+  margin: 0 0.8rem;
 }
 footer.finalDoSite div article h4,
 footer.finalDoSite div nav h4,
@@ -291,18 +285,18 @@ footer.finalDoSite div nav ul {
   margin: 0;
 }
 footer.finalDoSite div nav ul li {
-  margin: 0.5rem 0;
+  margin: 0.4rem 0;
 }
 footer.finalDoSite div nav ul li a {
   color: #f3f3f3;
   text-decoration: none;
 }
 footer.finalDoSite div div.imgSection img {
-  border-radius: 15px;
+  border-radius: 10px;
   width: 100%;
 }
 footer.finalDoSite div.copyrightSection {
-  padding: 1rem;
+  padding: 0.8rem;
   background-color: rgba(0, 0, 0, 0.2);
 }
 footer.finalDoSite div.copyrightSection a {
