--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -1,5 +1,4 @@
-@import 'variaveis';
-
+@import '../padronizacao/variaveis.scss';
 
 * {
   color: $corDaFontePrincipal;
@@ -11,7 +10,7 @@
 header {
   position: fixed;
   width: 100%;
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(6px);
   background-color: $corFundoBotao;
   z-index: 1;
 
@@ -19,46 +18,40 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 8vh;
+    height: 9vh;
     div {
       display: flex;
       align-items: center;
       img {
-        width: 5vw;
-        margin: 0.7vw;
-      }
-      h6 {
-        padding-top: 1vh;
-        font-family: $fonteFamiliaPrimaria;
-        font-weight: 700;
-        font-size: clamp(1em, 1.6em, 2em);
+        width: 4vw;
+        margin: 0.3vw;
       }
     }
   }
   nav {
     display: flex;
     align-items: center;
-    gap: clamp(2vw, 5vw, 10vw);
+    gap: clamp(1.5vw, 3vw, 5vw);
     a {
-      font-size: clamp(1.5vh, 2vh, 2.5vh);
+      font-size: clamp(1vh, 1.5vh, 2vh);
       font-weight: 600;
       text-decoration: none;
       color: $corDaFontePrincipal;
     }
   }
   button {
-    border-radius: 16px;
+    border-radius: 12px;
     border: none;
     display: flex;
     align-items: center;
-    height: clamp(3vh, 6vh, 12vh);
+    height: clamp(2.5vh, 4vh, 6vh);
     background: $gradiente;
     i,
     p {
-      margin: clamp(0.3vw, 0.6vw, 1vw);
+      margin: clamp(0.2vw, 0.4vw, 0.7vw);
       font-weight: 700;
       color: $corDaFontePrincipal;
-      font-size: clamp(0.4em, 0.9em, 1em);
+      font-size: clamp(0.3em, 0.7em, 0.8em);
     }
   }
 
@@ -69,7 +62,7 @@ header {
 
 main {
   section.inicio {
-    background: no-repeat url(../IMG/fundo.png);
+    background: no-repeat url(../img/fundo.png);
     background-size: cover;
     display: flex;
     flex-direction: column;
@@ -92,9 +85,8 @@ main {
       div {
         display: block;
         font-weight: 700;
-        font-size: clamp(2rem, 4rem, 6rem);
+        font-size: clamp(1.5rem, 3rem, 4rem);
       }
-    
     }
 
     .footerSectionInicio {
@@ -108,9 +100,9 @@ main {
 
       .divSubtituloInicio {
         text-align: center;
-        margin-bottom: clamp(1rem, 1.5rem, 2rem);
+        margin-bottom: clamp(0.8rem, 1.2rem, 1.5rem);
         h3 {
-          font-size: clamp(1.5rem, 1.8rem, 2rem);
+          font-size: clamp(1.2rem, 1.5rem, 1.8rem);
         }
       }
 
@@ -119,9 +111,9 @@ main {
         flex-wrap: wrap;
         justify-content: space-between;
         align-items: center;
-        gap: clamp(4vw, 8vw, 12vw);
+        gap: clamp(3vw, 6vw, 9vw);
         img {
-          width: clamp(3vw, 6vw, 12vw);
+          width: clamp(2.5vw, 5vw, 8vw);
           height: auto;
         }
       }
@@ -130,96 +122,96 @@ main {
 
   section.devWorkstation {
     display: flex;
-    margin: clamp(0.3vh, 0.5vh, 1vh) clamp(0.5vw, 1vw, 2vw);
+    margin: clamp(0.2vh, 0.4vh, 0.6vh) clamp(0.4vw, 0.8vw, 1.5vw);
     align-items: center;
-    padding: clamp(10vh, 15vh, 20vh) 0;
+    padding: clamp(8vh, 12vh, 15vh) 0;
     h2,
     p {
       color: $corTextoPreto;
     }
     h2 {
-      font-size: clamp(1.5em, 2em, 2.5em);
+      font-size: clamp(1.2em, 1.6em, 2em);
       background: $corBotaoGradiente;
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       font-weight: 300;
       font-family: $fonteFamiliaSecundaria;
-      margin-bottom: clamp(5vh, 7vh, 10vh);
+      margin-bottom: clamp(4vh, 5vh, 7vh);
     }
     p {
       font-weight: 650;
       font-family: $fonteFamiliaPrimaria;
-      font-size: clamp(1.5em, 2em, 2.5em);
+      font-size: clamp(1.2em, 1.6em, 2em);
     }
     img {
-      height: clamp(70vh, 95vh, 100vh);
+      height: clamp(60vh, 80vh, 90vh);
     }
   }
 
   section.cards {
-    margin-top: clamp(5rem, 9rem, 12rem);
+    margin-top: clamp(4rem, 7rem, 10rem);
     h2 {
-      font-size: clamp(1.5em, 2em, 2.5em);
+      font-size: clamp(1.2em, 1.6em, 2em);
       background: $corBotaoGradiente;
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       font-weight: 300;
       font-family: $fonteFamiliaSecundaria;
-      margin-bottom: clamp(5vh, 7vh, 10vh);
+      margin-bottom: clamp(4vh, 5vh, 7vh);
       text-align: center;
     }
     div {
       display: flex;
       justify-content: space-between;
-      margin: 0 clamp(0.5em, 1em, 2em);
+      margin: 0 clamp(0.4em, 0.8em, 1.5em);
       div {
         background-image: radial-gradient(
           circle farthest-corner at 11.3% -0.8%,
           rgba(153, 14, 241, 1) 0%,
           rgba(41, 3, 101, 1) 100.2%
         );
-        border-radius: 35px;
-        width: clamp(10vw, 15vw, 20vw);
-        height: clamp(25vh, 38vh, 45vh);
+        border-radius: 30px;
+        width: clamp(8vw, 12vw, 15vw);
+        height: clamp(20vh, 30vh, 35vh);
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         img {
-          border-radius: 30px;
-          width: clamp(10vw, 13vw, 15vw);
-          height: clamp(12vh, 18vh, 20vh);
+          border-radius: 25px;
+          width: clamp(8vw, 10vw, 12vw);
+          height: clamp(10vh, 15vh, 18vh);
           background-color: $corDaFontePrincipal;
-          margin-bottom: clamp(2vh, 4vh, 6vh);
+          margin-bottom: clamp(1.5vh, 3vh, 4vh);
         }
         h6 {
           font-family: $fonteFamiliaPrimaria;
-          font-size: clamp(1.5em, 2em, 2.5em);
+          font-size: clamp(1.2em, 1.6em, 2em);
           font-weight: 700;
           color: $corDaFontePrincipal;
         }
       }
       #cardEmbarcados {
-        width: clamp(12vw, 16vw, 20vw);
+        width: clamp(10vw, 12vw, 15vw);
       }
     }
   }
 
   section.sobreNos {
     display: flex;
-    padding: clamp(10vh, 15vh, 20vh) 0;
+    padding: clamp(8vh, 12vh, 15vh) 0;
     justify-content: center;
     flex-direction: column;
 
     h2 {
-      margin-top: clamp(3vh, 5vh, 7vh);
-      font-size: clamp(1.5em, 2em, 2.5em);
+      margin-top: clamp(2.5vh, 4vh, 5vh);
+      font-size: clamp(1.2em, 1.6em, 2em);
       background: $corBotaoGradiente;
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       font-weight: 300;
       font-family: $fonteFamiliaSecundaria;
-      margin-bottom: clamp(2vh, 3vh, 5vh);
+      margin-bottom: clamp(1.5vh, 2vh, 4vh);
       text-align: center;
     }
 
@@ -228,21 +220,21 @@ main {
       font-weight: 650;
       font-family: $fonteFamiliaPrimaria;
       text-align: center;
-      font-size: clamp(1em, 3em, 1.5em);
+      font-size: clamp(0.8em, 1.2em, 1.5em);
       color: $corTextoPreto;
     }
 
     div {
       display: flex;
       justify-content: center;
-      margin-top: clamp(1rem, 2rem, 3rem);
+      margin-top: clamp(0.8rem, 1.2rem, 2rem);
 
       button {
         display: flex;
         align-items: center;
         justify-content: center;
-        padding: clamp(1rem, 1.5rem, 2rem) clamp(2rem, 3rem, 4rem);
-        border-radius: 50px;
+        padding: clamp(0.8rem, 1rem, 1.5rem) clamp(1.5rem, 2rem, 3rem);
+        border-radius: 40px;
         background: $gradiente;
         border: none;
         cursor: pointer;
@@ -252,11 +244,11 @@ main {
           font-family: $fonteFamiliaPrimaria;
           color: $corDaFontePrincipal;
           font-weight: 650;
-          font-size: clamp(0.5rem, 1rem, 2rem);
+          font-size: clamp(0.4rem, 0.8rem, 1.5rem);
         }
 
         i {
-          margin-right: clamp(0.5rem, 1rem, 1.5rem);
+          margin-right: clamp(0.4rem, 0.8rem, 1rem);
           display: flex;
           align-items: center;
         }
@@ -272,19 +264,19 @@ main {
 }
 
 section.letreiro {
-  padding: clamp(2vh, 5vh, 8vh) 0;
+  padding: clamp(1.5vh, 3vh, 5vh) 0;
   width: 100%;
   marquee {
     width: 100%;
     i {
       color: $corTextoPreto;
-      font-size: clamp(1em, 1.3em, 2em);
+      font-size: clamp(0.8em, 1em, 1.5em);
       font-weight: 600;
       font-family: $fonteFamiliaPrimaria;
     }
     i#vermelhinho {
       color: $corVermelho;
-      margin-right: clamp(3vw, 6.5vw, 10vw);
+      margin-right: clamp(2vw, 5vw, 7vw);
     }
   }
 }
@@ -298,12 +290,12 @@ footer.finalDoSite {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: clamp(0.5rem, 1rem, 2rem);
+    padding: clamp(0.4rem, 0.8rem, 1.5rem);
     article,
     nav,
     .imgSection {
-      max-width: clamp(20%, 30%, 40%);
-      margin: 0 clamp(0.5rem, 1rem, 2rem);
+      max-width: clamp(15%, 25%, 30%);
+      margin: 0 clamp(0.4rem, 0.8rem, 1.5rem);
       h4 {
         text-transform: uppercase;
       }
@@ -313,7 +305,7 @@ footer.finalDoSite {
       padding: 0;
       margin: 0;
       li {
-        margin: clamp(0.3rem, 0.5rem, 1rem) 0;
+        margin: clamp(0.2rem, 0.4rem, 0.8rem) 0;
         a {
           color: $corDaFontePrincipal;
           text-decoration: none;
@@ -321,12 +313,12 @@ footer.finalDoSite {
       }
     }
     div.imgSection img {
-      border-radius: 15px;
+      border-radius: 10px;
       width: 100%;
     }
   }
   div.copyrightSection {
-    padding: clamp(0.5rem, 1rem, 2rem);
+    padding: clamp(0.4rem, 0.8rem, 1.5rem);
     background-color: rgba(0, 0, 0, 0.2);
     a {
       color: $corDaFontePrincipal;
