--- a/styles/sass/style.css
+++ b/styles/sass/style.css
@@ -137,49 +137,46 @@ main section.devWorkstation p {
 main section.devWorkstation img {
   height: 80vh;
 }
-main section.cards {
-  margin-top: 7rem;
+main section.areasDesenvolvimento {
+  padding: 2rem;
+  background-color: #f4f4f4;
 }
-main section.cards h2 {
-  font-size: 1.6em;
-  background: linear-gradient(to right, #3372E3 0%, #7426EF 100%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  font-weight: 300;
-  font-family: "Anton";
-  margin-bottom: 5vh;
+main section.areasDesenvolvimento h2 {
   text-align: center;
+  font-size: 2rem;
+  margin-bottom: 1.5rem;
+  color: #303;
 }
-main section.cards div {
-  display: flex;
-  justify-content: space-between;
-  margin: 0 0.8em;
+main section.areasDesenvolvimento .categorias {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 2rem;
+  padding: 1rem;
 }
-main section.cards div div {
-  background-image: radial-gradient(circle farthest-corner at 11.3% -0.8%, rgb(153, 14, 241) 0%, rgb(41, 3, 101) 100.2%);
-  border-radius: 30px;
-  width: 12vw;
-  height: 30vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+main section.areasDesenvolvimento .categorias .categoria {
+  background-color: #fff;
+  padding: 1.5rem;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  transition: transform 0.3s ease;
 }
-main section.cards div div img {
-  border-radius: 25px;
-  width: 10vw;
-  height: 15vh;
-  background-color: #f3f3f3;
-  margin-bottom: 3vh;
+main section.areasDesenvolvimento .categorias .categoria:hover {
+  transform: translateY(-5px);
 }
-main section.cards div div h6 {
-  font-family: "Open Sans";
-  font-size: 1.6em;
-  font-weight: 700;
-  color: #f3f3f3;
+main section.areasDesenvolvimento .categorias .categoria i {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+  color: #007bff;
 }
-main section.cards div #cardEmbarcados {
-  width: 12vw;
+main section.areasDesenvolvimento .categorias .categoria h3 {
+  font-size: 1.5rem;
+  margin-bottom: 0.5rem;
+  color: #007bff;
+}
+main section.areasDesenvolvimento .categorias .categoria p {
+  font-size: 1rem;
+  color: #666;
 }
 main section.sobreNos {
   display: flex;
