--- a/styles/sass/responsividade.css
+++ b/styles/sass/responsividade.css
@@ -8,7 +8,7 @@
     align-items: center;
     padding: 0 1rem;
     position: fixed;
-    width: 100%;
+    width: 100vw;
     -webkit-backdrop-filter: blur(6px);
             backdrop-filter: blur(6px);
     background-color: rgba(0, 0, 1, 0.514);
