--- a/styles/sass/responsividade.scss
+++ b/styles/sass/responsividade.scss
@@ -9,7 +9,7 @@
     align-items: center;
     padding: 0 1rem;
     position: fixed;
-    width: 100%;
+    width: 100vw;
     backdrop-filter: blur(6px);
     background-color: $corFundoBotao;
     z-index: 10; /* Mantém o header acima de outros elementos */
