--- a/styles/sass/responsividade.css
+++ b/styles/sass/responsividade.css
@@ -1,8 +1,6 @@
 @charset "UTF-8";
-/* Para telas menores que 900px */
 @media screen and (max-width: 900px) {
   header {
-    /* Ajustes gerais para o header */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -12,24 +10,26 @@
     -webkit-backdrop-filter: blur(6px);
             backdrop-filter: blur(6px);
     background-color: rgba(0, 0, 1, 0.514);
-    z-index: 10; /* Mantém o header acima de outros elementos */
+    z-index: 10;
     /* Esconde o nav inicialmente */
     /* Menu aberto */
     /* Esconde o botão de atendimento */
   }
+  header img#logoHeader {
+    width: 14vw;
+  }
   header .menu-hamburguer {
     display: block;
+    width: 13vw;
+    height: 3vw;
     cursor: pointer;
-    z-index: 20;
-    /* Estilo das barras do ícone */
   }
   header .menu-hamburguer span {
-    display: block;
-    width: 25px;
-    height: 3px;
-    margin: 5px;
+    width: 100%;
+    height: 7vw;
     background-color: #f3f3f3;
-    transition: 0.3s;
+    margin: 1.5vw;
+    transition: all 0.3s;
   }
   header nav {
     display: none;
