--- a/styles/sass/responsividade.scss
+++ b/styles/sass/responsividade.scss
@@ -1,9 +1,6 @@
 @import '../padronizacao/variaveis.scss';
-
-/* Para telas menores que 900px */
 @media screen and (max-width: 900px) {
   header {
-    /* Ajustes gerais para o header */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -12,21 +9,21 @@
     width: 100vw;
     backdrop-filter: blur(6px);
     background-color: $corFundoBotao;
-    z-index: 10; /* Mantém o header acima de outros elementos */
-
+    z-index: 10;
+    img#logoHeader {
+      width: 14vw;
+    }
     .menu-hamburguer {
       display: block;
+      width: 13vw;
+      height: 3vw;
       cursor: pointer;
-      z-index: 20;
-
-      /* Estilo das barras do ícone */
-      span {
-        display: block;
-        width: 25px;
-        height: 3px;
-        margin: 5px;
-        background-color: $corDaFontePrincipal;
-        transition: 0.3s;
+      span{
+        width: 100%;
+        height: 7vw;
+        background-color: #f3f3f3;
+        margin: 1.5vw;
+        transition: all 0.3s;
       }
     }
 
