--- a/styles/sass/responsividade.css
+++ b/styles/sass/responsividade.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1300px) {
   header {
     display: flex;
     justify-content: space-between;
@@ -57,6 +57,8 @@
   }
   /* Ajustes para o main e demais seções */
   main section.inicio {
+    background: no-repeat url(../img/fundoMobile.png);
+    background-size: cover;
     display: flex;
     flex-direction: column;
     justify-content: center;
