--- a/styles/sass/responsividade.scss
+++ b/styles/sass/responsividade.scss
@@ -1,5 +1,5 @@
 @import '../padronizacao/variaveis.scss';
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1300px) {
   header {
     display: flex;
     justify-content: space-between;
@@ -62,6 +62,8 @@
   /* Ajustes para o main e demais seções */
   main {
     section.inicio {
+      background: no-repeat url(../img/fundoMobile.png);
+      background-size: cover;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -331,3 +333,5 @@
     }
   }
 }
+
+
