--- a/styles/sass/responsividade.css
+++ b/styles/sass/responsividade.css
@@ -7,6 +7,7 @@
     padding: 0 1rem;
     position: fixed;
     width: 100vw;
+    height: 15vh;
     -webkit-backdrop-filter: blur(6px);
             backdrop-filter: blur(6px);
     background-color: rgba(0, 0, 1, 0.514);
@@ -16,17 +17,17 @@
     /* Esconde o botão de atendimento */
   }
   header img#logoHeader {
-    width: 14vw;
+    width: 9vw;
   }
   header .menu-hamburguer {
     display: block;
-    width: 13vw;
-    height: 3vw;
+    width: 11vw;
+    height: 5vw;
     cursor: pointer;
   }
   header .menu-hamburguer span {
     width: 100%;
-    height: 7vw;
+    height: 3vw;
     background-color: #f3f3f3;
     margin: 1.5vw;
     transition: all 0.3s;
@@ -57,8 +58,8 @@
   }
   /* Ajustes para o main e demais seções */
   main section.inicio {
-    background: no-repeat url(../img/fundoMobile.png);
-    background-size: cover;
+    background: no-repeat url(../img/fundoMobile.jpg);
+    background-position: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -152,7 +153,7 @@
   }
 }
 /* Para telas menores que 650px */
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 750px) {
   header .menu-hamburguer {
     right: 0.5rem;
   }
@@ -194,8 +195,8 @@
     width: 60%;
   }
 }
-/* Para telas menores que 350px */
-@media screen and (max-width: 350px) {
+/* Para telas menores que 450px */
+@media screen and (max-width: 450px) {
   header .menu-hamburguer {
     right: 0.3rem;
   }
@@ -237,7 +238,20 @@
   main section.letreiro marquee i {
     font-size: 0.7em;
   }
-  main footer.finalDoSite div.imgSection img {
-    width: 70%;
+  footer.finalDoSite {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 1em;
+    padding: 0.5em;
+  }
+  footer.finalDoSite .finalDoSite > div {
+    grid-column: 1;
+  }
+  footer.finalDoSite .imgSection {
+    margin-bottom: 0;
+  }
+  footer.finalDoSite .copyrightSection {
+    margin-top: 0;
+    text-align: center;
   }
 }/*# sourceMappingURL=responsividade.css.map */
