--- a/styles/sass/responsividade.scss
+++ b/styles/sass/responsividade.scss
@@ -1,5 +1,5 @@
 @import '../padronizacao/variaveis.scss';
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1300px) {
   header {
     display: flex;
     justify-content: space-between;
@@ -7,20 +7,21 @@
     padding: 0 1rem;
     position: fixed;
     width: 100vw;
+    height: 15vh;
     backdrop-filter: blur(6px);
     background-color: $corFundoBotao;
     z-index: 10;
     img#logoHeader {
-      width: 14vw;
+      width: 9vw;
     }
     .menu-hamburguer {
       display: block;
-      width: 13vw;
-      height: 3vw;
+      width: 11vw;
+      height: 5vw;
       cursor: pointer;
       span{
         width: 100%;
-        height: 7vw;
+        height: 3vw;
         background-color: #f3f3f3;
         margin: 1.5vw;
         transition: all 0.3s;
@@ -62,8 +63,8 @@
   /* Ajustes para o main e demais seções */
   main {
     section.inicio {
-      background: no-repeat url(../img/fundoMobile.png);
-      background-size: cover;
+      background: no-repeat url(../img/fundoMobile.jpg);
+      background-position: center;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -194,7 +195,7 @@
 }
 
 /* Para telas menores que 650px */
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 750px) {
   header {
     .menu-hamburguer {
       right: 0.5rem;
@@ -261,8 +262,8 @@
   }
 }
 
-/* Para telas menores que 350px */
-@media screen and (max-width: 350px) {
+/* Para telas menores que 450px */
+@media screen and (max-width: 450px) {
   header {
     .menu-hamburguer {
       right: 0.3rem;
@@ -327,10 +328,24 @@
     section.letreiro marquee i {
       font-size: clamp(0.5em, 0.7em, 0.9em);
     }
-
-    footer.finalDoSite div.imgSection img {
-      width: 70%;
+  }
+  footer.finalDoSite{
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 1em;
+    padding: 0.5em;
+    .finalDoSite > div {
+      grid-column: 1;
     }
+    .imgSection {
+      margin-bottom: 0;
+    }
+    
+    .copyrightSection {
+      margin-top: 0;
+      text-align: center;
+    }
+    
   }
 }
 
