--- a/styles/sass/responsividade.scss
+++ b/styles/sass/responsividade.scss
@@ -197,24 +197,24 @@
 
 /* Para telas menores que 650px */
 @media screen and (max-width: 550px) {
-  header{
+  header {
     width: 100%;
-    div.container{
+    div.container {
       width: 90%;
-      img#logoHeader{
+      img#logoHeader {
         width: 14vw;
       }
-      .menu-hamburguer{
-        span{
+      .menu-hamburguer {
+        span {
           width: 2vw;
           height: 4vh;
         }
       }
     }
   }
-  main{
+  main {
     width: 100%;
-    section.inicio{
+    section.inicio {
       background: no-repeat url(../img/fundoMobile.png);
       background-size: cover;
       display: flex;
@@ -223,70 +223,42 @@
       align-items: center;
       height: 100vh;
       position: relative;
-      div.digitacao{
-        div{
+      div.digitacao {
+        div {
           font-size: 1.3em;
         }
       }
-      .footerSectionInicio{
-        .divSubtituloInicio{
-          h3{
+      .footerSectionInicio {
+        .divSubtituloInicio {
+          h3 {
             font-size: 0.9em;
           }
         }
       }
+    }
+   
   }
-  .finalDoSite {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-gap: 20px;
-    padding: 40px;
-    background-color: #f7f7f7;
-  }
-  
   .finalDoSite > div {
-    grid-column: 1;
-  }
-  
-  article {
-    grid-column: 1;
-    background-color: #fff;
-    padding: 20px;
-    border: 1px solid #ddd;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  article h4 {
-    margin-top: 0;
-  }
-  
-  .imgSection {
-    grid-column: 1;
-    text-align: center;
-  }
-  
-  .imgSection img {
-    width: 100%;
-    height: auto;
-    border-radius: 10px;
-  }
-  
-  .copyrightSection {
-    grid-column: 1;
-    text-align: center;
-    font-size: 14px;
-    color: #666;
-  }
-  
-  .copyrightSection a {
-    text-decoration: none;
-    color: #337ab7;
-  }
-  
-  .copyrightSection a:hover {
-    color: #23527c;
-  }
-  }
+    display: flex;
+    flex-direction: column;
+}
+
+.imgSection {
+    order: 1;
+   width: 90vw;
+}
+
+article {
+    display: flex;
+    justify-content: center;
+    order: 2;
+    h4{
+      white-space: nowrap;
+    }
+    p{
+      display: none;
+    }
+}
 
   
 }
