--- a/styles/sass/responsividade.scss
+++ b/styles/sass/responsividade.scss
@@ -225,13 +225,19 @@
       position: relative;
       div.digitacao {
         div {
-          font-size: 1.3em;
+          font-size: 1.2rem;
+          font-weight: 700;
         }
       }
       .footerSectionInicio {
         .divSubtituloInicio {
           h3 {
-            font-size: 0.9em;
+            font-size: 1em;
+          }
+        }
+        div.divImg{
+          img{
+            width: 10vw;
           }
         }
       }
@@ -255,7 +261,7 @@ article {
     h4{
       white-space: nowrap;
     }
-    p{
+    img, p{
       display: none;
     }
 }
